# FullStackMVP

./: README.md
api/: pyproject.toml
api/my_api/hooks/: __init__.py  database.py  profile.py
api/my_api/routes/: __init__.py  auth.py  calculator.py  tests.py
api/my_api/utils/: token.py
api/scripts/: main.py
app/: package-lock.json  package.json
app/public/: index.html  manifest.json
app/scripts/: generate_client.js
app/src/: App.tsx  index.tsx
app/src/api/my_api/: api.ts  base.ts
app/src/components/: CoordInput.tsx  Display.tsx  Ping.tsx
app/src/contexts/: APIContext.ts
app/src/hooks/: useAPI.ts
app/src/providers/: APIProvider.tsx
assets/data/: users.json
database/: pyproject.toml
database/my_database/: __init__.py  database.py
database/scripts/: authenticate_user.py  create_user.py
schema/: .gitignore  pyproject.toml
schema/my_schema/: __init__.py  account_record.py  profile.py
